# AI-Powered-MLOps-Automation-Platform

./: .emb_meta.json  .embeddings.npy  .gitignore  .tfidf_vectorizer.npy  requirements.txt
autoops/: .env.example  .gitignore  ARCHITECTURE.md  COMPLETE_SETUP_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_STATUS.md  FEATURES.md  FINAL_DEPLOYMENT_FIX.md  FRONTEND_SETUP.md  FULLSTACK_DEPLOYMENT.md  GET_STARTED.md  INDEX.md  LICENSE  Makefile  PRODUCTION_STATUS.md  PROJECT_BRIEF.md  PROJECT_DOCUMENTATION.md  PROJECT_OVERVIEW.md  PROJECT_SUMMARY.md  PYTHON_VERSION_DEPLOYMENT.md  PYTHON_VERSION_FIX.md  QUICKSTART.md  README.md  RENDER_FIX.md  SUMMARY.md  TROUBLESHOOTING.md  ULTIMATE_RENDER_FIX.md  WHY_AUTOOPS.md  check-status.ps1  clean-frontend.ps1  debug_backend.py  demo_complete_platform.py  deploy.ps1  production_backend.py  production_backend_minimal.py  production_backend_simple.py  pyproject.toml  quickstart.ps1  (+10 more)
autoops/.github/workflows/: ci-cd.yml
autoops/cli/: autoops_cli.py
autoops/cli/commands/: start.py  status.py
autoops/configs/: default_config.yaml  logging_config.json
autoops/examples/notebook/: demo.ipynb
autoops/frontend/: .env.local.example  BACKEND_INTEGRATION.md  netlify.toml  next.config.js  test-api.html
autoops/frontend/src/app/: globals.css  layout.tsx  page.tsx
autoops/frontend/src/app/dashboard/: page.tsx
autoops/frontend/src/app/debug/: page.tsx
autoops/frontend/src/app/docs/: page.tsx
autoops/frontend/src/app/playground/: page.tsx
autoops/frontend/src/app/test/: page.tsx
autoops/frontend/src/components/: LandingPage.tsx  Navigation.tsx
autoops/helm-chart/: Chart.yaml  values.yaml
autoops/helm-chart/templates/: deployment.yaml  service.yaml
autoops/infra/k8s/base/: grafana-deployment.yaml  log-collector-daemonset.yaml  namespace.yaml  prometheus-deployment.yaml
autoops/infra/k8s/overlays/production/: model-deployment.yaml  model-service.yaml
autoops/infra/terraform/: main.tf  outputs.tf  variables.tf
autoops/models/: metrics-20251019_172257.json  metrics-20251019_174223.json  model_metadata.json  pytorch_metrics-20251019_194333.json  pytorch_model_metadata.json
autoops/pipelines/dags/: sample_pipeline.py
autoops/pipelines/training/: evaluate.py  train.py  train_pytorch.py  utils.py
autoops/pipelines/training/models/: pytorch_metrics-20251020_041445.json  pytorch_model.pt  pytorch_model_metadata.json
autoops/scripts/: build_and_push.sh  deploy_k8s.sh  download_model_from_hf.py  run_local.sh  upload_model_to_hf.py
autoops/services/model_service/: Dockerfile  requirements.txt
autoops/services/model_service/app/: main.py
autoops/services/model_service/app/api/: endpoints.py  health.py  llm_endpoints.py
autoops/services/model_service/app/model/: comprehensive_llm.py  gemini_model.py  llm_model.py  model.py  predict.py  pytorch_model.py  unified_predictor.py
autoops/services/model_service/app/utils/: telemetry.py
autoops/services/model_service/tests/: test_api.py  test_model.py
autoops/tests/: conftest.py
autoops/tests/integration/: test_full_pipeline.py
logs/: sample_logs.jsonl
src/: assist_query.py  check_logs.py  fix_bom.py  index_logs.py  inspect_vectorizer.py
